# AI_MUSIC

./: README.md  music_model.onnx
cpp_gui_juce/: README.md
python_model/: train_model.py
rust_inference/: Cargo.toml
rust_inference/src/: lib.rs  main.rs
